--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         </section>
         <section class="chats">
             <h3>Your Feed</h3>
-            <div class="posts">
-            </div>
+                <div class="posts" id="post-container"></div>
         </section>
     </section>
 
